Fixed spacing

--- a/src/themes/standard/less/main.less
+++ b/src/themes/standard/less/main.less
@@ -13,7 +13,7 @@ main {
 
 	article ul {
 		list-style: none;
-		padding-left: 0;
+		padding: 0 0 40px 0;
 
 		a {
 			padding-left: 25px;
@@ -47,6 +47,10 @@ main {
 
 			h3 {
 				margin: 0;
+			}
+
+			ul {
+				padding: 0;
 			}
 
 			li {
